# drake

./: CMakeLists.txt  WORKSPACE  addpath_drake.m  drake_visualizer_planar_setup.py
+expression/: Affine.m  Base.m  Composed.m  Constant.m  ConstantPower.m  Container.m  Difference.m  ElementwiseProduct.m  Identity.m  Linear.m  Sum.m  VertCat.m  Zeros.m
+expression/+euclidean/: LinearCombination.m  NormSquared.m  Projection.m  SignedDistanceToHyperplane.m
+expression/+frames/: R.m
+expression/+kinematic/: Base.m  RelativePosition.m  RelativeQuaternion.m
+expression/+test/: constantPowerTest.m  elementwiseProductTest.m  identityTest.m  sumTest.m  uminusTest.m  vertCatTest.m
bindings/pydrake/: BUILD.bazel  all.py  geometry_py.cc  math_py.cc  trajectories_py.cc
cmake/: packages.cmake
common/proto/: call_python_client.py
common/trajectories/: BUILD.bazel  bspline_scratch.cc  piecewise_function.cc  piecewise_polynomial.cc  piecewise_polynomial.h
drake/: BUILD  CMakeLists.txt
drake/common/: CMakeLists.txt
drake/multibody/: inverse_kinematics_trajectory_backend.cc  rigid_body_tree.cc
drake/solvers/: MixedIntegerConvexProgram.m  MixedIntegerHopperPlanner.m  NonlinearProgram.m  NonlinearProgramSnoptmex.cpp
examples/Acrobot/: AcrobotPlant.m
examples/Atlas/: explore.m  paramEstStatic.m  processStaticData.m  runAtlasRunning.m  runStaticPoseTest.m
examples/IRB140/: irb_140.urdf  rrt_planning.m
examples/acrobot/: BUILD.bazel  spong_controller.cc  spong_controller.h  spong_controller_params.named_vector
examples/manipulation_station/: joint_teleop.py
geometry/optimization/: BUILD.bazel  bspline_graphs_of_convex_sets.cc  bspline_graphs_of_convex_sets.h  graph_of_convex_sets.cc  graph_of_convex_sets.h  hpolyhedron.h
geometry/proximity/: distance_to_shape.h
manipulation/planner/: BUILD.bazel  bspline_basis.cc  bspline_basis.h  bspline_curve.cc  bspline_curve.h  differential_inverse_kinematics.cc  differential_inverse_kinematics.h  differential_inverse_kinematics_system.cc  differential_inverse_kinematics_system.h  iiwa_scratch.cc  kin_traj_opt_iiwa_scratch.cc  kin_traj_opt_scratch.cc  kinematic_trajectory_optimization.cc  kinematic_trajectory_optimization.h  kinematic_trajectory_optimization_scratch.cc  notes.txt  pose_interpolator.cc  pose_interpolator.h
manipulation/planner/test/: bspline_basis_test.cc  differential_inverse_kinematics_system_test.cc  differential_inverse_kinematics_test.cc  kinematic_trajectory_optimization_test.cc
manipulation/util/: BUILD.bazel  passive_model_tree_demo.cc  trajectory_utils.h  world_sim_tree_builder.cc  world_sim_tree_builder.h
manipulation/util/model_tree/: BUILD.bazel  base_joint.h  model.cc  model.h  model_tree.cc  model_tree.h  model_tree.proto  model_tree_node.cc  model_tree_node.h  protobuf_converter.cc  protobuf_converter.h
manipulation/util/model_tree/test/: model_tree_node_test.cc  nested.model_tree  protobuf_converter_test.cc  top_level.model_tree
math/: BUILD.bazel  bspline_basis.cc  bspline_basis.h  bspline_curve.cc  bspline_curve.h  knot_vector_type.h
math/test/: bspline_basis_test.cc  bspline_curve_test.cc
multibody/: rigid_body_tree.cc  rigid_body_tree.h
multibody/collision/: element.cc  fcl_model.cc  fcl_model.h
multibody/inverse_kinematics/: angle_between_vectors_constraint.h  gaze_target_constraint.cc  gaze_target_constraint.h  inverse_kinematics.cc  minimum_distance_constraint.cc  minimum_distance_constraint.h  orientation_constraint.cc  orientation_constraint.h  position_constraint.cc
multibody/plant/: multibody_plant.cc
multibody/rational_forward_kinematics/: BUILD.bazel  configuration_space_collision_free_region.cc
perception/: BUILD.bazel
solvers/: BUILD.bazel  CartesianMotionPlanningTree.m  CompositeVertexArrayTree.m  ConfigurationSpaceMotionPlanningTree.m  DifferentiableConstraint.m  LeggedLocomotionPlanner.m  LeggedRobotPlanningProblem.m  LinearConstraint.m  MixedIntegerConvexProgram.m  MixedIntegerHopperPlanner.m  MotionPlanningProblem.m  MotionPlanningTree.m  NonlinearConstraint.m  NonlinearProgram.m  NonlinearProgramWConstraintObjects.m  ParticularizedDynamicsProgram.m  ParticularizedDynamicsProgramFixedForces.m  ParticularizedDynamicsProgramFixedPositions.m  ParticularizedDynamicsProgramLotsOfBinary.m  ParticularizedDynamicsProgramTwoPositions.m  QuadraticConstraint.m  QuadraticSumConstraint.m  R3MotionPlanningTree.m  SE3MotionPlanningTree.m  SO3MotionPlanningTree.m  SequentialMixedIntegerConvexPlanner.m  StateAlternatingDynamicsProgram.m  VertexArrayTree.m  bspline_curve_optimization_utilities.cc  bspline_curve_optimization_utilities.h  cost.cc  gurobi_solver.cc  mathematical_program.cc  particle.urdf
solvers/+drakeFunction/: Affine.m  Concatenated.m  Constant.m  ConstantMultiple.m  DrakeFunction.m  ElementwiseProduct.m  FiniteDifferenceDerivative.m  JointTorques.m  RotateVector.m  ScalarProduct.m  TransformPoint.m  Zeros.m
solvers/test/: bspline_micp_test.cc  ikRRT.m  ikRRT2.m  ikTSRRT.m  littleBrick.urdf  rrt_basic.m  rrt_bugtrap.m  rrt_piano_mover_rotation.m  rrt_piano_mover_translation.m  testConstraint.m  testHopper.m  testLeggedLocomotionPlanner.m  testLeggedLocomotionPlanner_switch.m  testParticularizedDynamicsProgram.m  testParticularizedDynamicsProgramAlternation.m  testSequentialMixedIntegerConvexPlanner.m
solvers/trajectoryOptimization/: CoMFootStepPolygon.m  CoMForcePlanning.m  CoMVisualizer.m  DirectTrajectoryOptimization.m  FixedFootYawCoMPlanningNLP.m  FloatingBaseDynamicsFullKinematicsPlanner.m  InverseKin.m  (+12 more)
tools/: BUILD  CROSSTOOL  drake_visualizer_linux.sh
util/: DrakeIddata.m  baseParameters.m  cullIddataExperimentsByDuration.m  errorDeprecatedFunction.m  extractStartEndIndices.m  findMissingIddata.m  generateBiasForceFunction.m  generateSpatialInertiaTimesSpatialVelocityFunction.m  iddataChannelNamesByRegexp.m  indexIddataByTime.m  linearParameters.m  maxIddataTs.m  quatProduct.m  quatconjIddata.m  quatrotateIddata.m  resampleIddataWithTs.m  spot_isZero.m  spot_isequal.m  spot_unique.m  synchronizeIddata.m  trimIddataToShortestDuration.m
(+379 files in other folders)
