# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "@drake//tools/skylark:drake_proto.bzl",
    "drake_cc_proto_library",
)

package(
    default_visibility = [
        "//manipulation/util:__subpackages__",
    ],
)

drake_cc_proto_library(
    name = "model_tree_proto",
    srcs = [
        "model_tree.proto",
    ],
)

drake_cc_library(
    name = "model_tree_node",
    hdrs = [
        "model_tree_node.h",
    ],
    deps = [
        "//common:essential",
        "//math:geometric_transform",
    ],
)

drake_cc_library(
    name = "protobuf_converter",
    srcs = [
        "protobuf_converter.cc"
    ],
    hdrs = [
        "protobuf_converter.h",
    ],
    deps = [
        ":model_tree_node",
        ":model_tree_proto",
        "//common:find_resource",
        "//common/proto:protobuf",
        "@spruce"
    ],
)

# === test/ ===

drake_cc_googletest(
    name = "model_tree_node_test",
    deps = [
        ":model_tree_node",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

add_lint_tests()

